--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-lottie-player": "^1.5.4",
+    "sass": "^1.59.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
