--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lottie-player": "^1.5.4",
+    "react-scroll": "^1.8.9",
     "sass": "^1.59.2",
     "three": "^0.150.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-scroll": "^1.8.6",
     "@types/three": "^0.149.0",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
